# AccuiNES

./: .gitignore  AccuiNES  CMakeLists.txt  compile.bat  compile_commands.json
cmake/linux/: CMakeLists.txt
src/: header.hpp  main.cpp  main.hpp
src/CPU/: _decode_rom.hpp  _instr_name.hpp  cpu.cpp  cpu.hpp  opcode.cpp  opcode.hpp  opcode_type.cpp  opcode_type.hpp
src/Mapper/: base.cpp  mapper.hpp
src/Mapper/mappers/: _mappers.hpp  mappers.hpp  nrom.cpp
src/PPU/: ppu.cpp  ppu.hpp
